--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     >
         <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
         <a-entity
-            gltf-model="./augmented-image-test/public/assets/Munich01.glb"
+            gltf-model="public/assets/Munich01.glb"
             scale="1 1 1"
             position="0 0 0"
         >
