--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     >
         <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
         <a-entity
-            gltf-model="public/assets/Munich01.glb"
-            scale="0.0001 0.0001 0.0001"
+            gltf-model="public/assets/cube.glb"
+            scale="1 1 1"
             position="0 0 0"
         >
         </a-entity>
